--- a/style.css
+++ b/style.css
@@ -127,7 +127,111 @@ body::-webkit-scrollbar-thumb {
 }
 
 .container {
-  height: 200vh;
-  background-color: yellowgreen;
+  background-color: #0f0f0f;
   border: 2px solid black;
+  padding-left: 6vw;
+  padding-top: 20vh;
+  color: white;
+}
+
+.videos-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 40px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.video-card {
+  width: 344px;
+}
+
+.vid-img {
+  width: 100%;
+  padding-bottom: 12px;
+}
+
+.vid-img img {
+  width: 100%;
+  border-radius: 12px;
+}
+
+.vid-info {
+  display: flex;
+  gap: 12px;
+}
+
+.info-left img {
+  height: 36px;
+  width: 36px;
+  border-radius: 50%;
+}
+
+.info-right {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.vid-title {
+  font-weight: bold;
+}
+
+.channel-name {
+  color: #aaa;
+  font-size: 14px;
+}
+
+.vid-analytics {
+  color: #aaa;
+  font-size: 14px;
+}
+
+.shorts-heading {
+  padding: 40px 0;
+  padding-left: 40px;
+  padding-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+.shorts-para {
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.shorts-option {
+  display: flex;
+  flex-direction: column;
+  line-height: 6px;
+}
+
+.shorts-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 40px;
+  padding-right: 20px;
+}
+
+.short-card {
+  width: 224px;
+}
+
+.short-card img {
+  width: 100%;
+  border-radius: 12px;
+}
+
+.short-title {
+  font-weight: bold;
+  padding: 10px 0;
+}
+
+.short-views {
+  color: #aaa;
+  font-size: 14px;
 }
